--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Jeffrey Hunter <jeff@missioncriticallabs.com>",
   "license": "MIT",
   "private": false,
-  "respository": {
+  "repository": {
     "type": "git",
     "url": "https://github.com/jeffreyhunter77/expressive-test-util.git"
   },
